# ImGui-LaTeX-SDL-Example

./: .gitignore  CMakeLists.txt  readme.md
assets/: imgui.ini
cmake/: imgui.cmake  microtex.cmake  sdl3.cmake
run/: run_vs2022.bat
src/: CMakeLists.txt  demo.cpp  demo.h  main.cpp  microtex_imgui_graphics.cpp  microtex_imgui_graphics.h
